# biotact-agent-proto

./: .env.example  .gitignore  .pre-commit-config.yaml  Biotact Media Ecosystem Plan.docx  Biotact Media Ecosystem Plan.docx.txt  Dockerfile  LICENSE  README.md  app.py  biotact_ai_agent.py  cli.py  config.py  docker-compose.yml  json_to_csv.py  main.py  make_ready_for_employer.py  next_7_days_plan.csv  prepare_docs.py  pyproject.toml  q4_2025_plan.csv  q4_2025_plan.json  reply.txt  rules.json  samples_for_employer.txt  server.py  server.py.bak_auto_20251027124142  server.py.bak_clean_20251027123856  server.py.bak_htmlutf8_20251027125204  server.py.bak_order_20251027124848  server.py.bak_utf8_20251027122006  server.py.bak_utf8_20251027125607  server.py.bak_utf8_20251027132149  server_unified.py  tune_plan.py  Инфо о бренде 2025 (RU).docx  Инфо о бренде 2025 (RU).docx.txt  Инфо о продуктах 2025 (RU).docx  Инфо о продуктах 2025 (RU).docx.txt  Тестовое Задание.docx  Тестовое Задание.docx.txt
.github/workflows/: ci.yml
agent/: __init__.py  actions.py  contracts.py  core.py  doc_parser.py  exporter.py  generator.py  llm_client.py  logs.py  planner.py  policy.py  rag.py  runner.py  tool_registry.py
data/: products.yml
data/corpus/: brand_story.txt  knowledge_base.txt
data/templates/: README.md  (+1 more)
docs/: app.js  index.html
pipelines/: example.yml
scripts/: dev.ps1  smoke_test.py
skills/: README.md
tests/: test_doc_parser.py  test_exporter.py  test_health.py  test_llm_client.py  test_planner.py  test_rag.py
webui/: app.js  app.py  index.html  styles.css
(+17 files in other folders)
