[tool.poetry]
name = "agent-platform"
version = "0.1.0"
description = "Modular intelligent agent platform with planning, generation, and export capabilities."
authors = ["Agent Platform Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "agent" }, { include = "skills" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
pyyaml = "^6.0.1"
python-docx = "^1.1.0"
fpdf2 = "^2.7.9"
jinja2 = "^3.1.4"
httpx = "^0.27.0"
tenacity = "^8.2.3"
rich = "^13.7.1"
pypdf = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.2"
black = "^24.4.0"
isort = "^5.13.2"

[tool.poetry.scripts]
agent-platform = "cli:app"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "A",
]
ignore = []

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --disable-warnings"
testpaths = ["tests", "skills"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
